1.9.0/_sources/reference/dipy.io.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`io`
=========
.. automodule:: dipy.io

.. currentmodule:: dipy.io
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.dpy`
---------------------
.. automodule:: dipy.io.dpy

.. currentmodule:: dipy.io.dpy
.. autosummary::

   Dpy

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.gradients`
---------------------------
.. automodule:: dipy.io.gradients

.. currentmodule:: dipy.io.gradients
.. autosummary::

   read_bvals_bvecs

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.image`
-----------------------
.. automodule:: dipy.io.image

.. currentmodule:: dipy.io.image
.. autosummary::

   load_nifti_data
   load_nifti
   save_nifti
   save_qa_metric

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.peaks`
-----------------------
.. automodule:: dipy.io.peaks

.. currentmodule:: dipy.io.peaks
.. autosummary::

   load_peaks
   save_peaks
   peaks_to_niftis

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.pickles`
-------------------------
.. automodule:: dipy.io.pickles

.. currentmodule:: dipy.io.pickles
.. autosummary::

   save_pickle
   load_pickle

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.stateful_tractogram`
-------------------------------------
.. automodule:: dipy.io.stateful_tractogram

.. currentmodule:: dipy.io.stateful_tractogram
.. autosummary::

   Space
   Origin
   StatefulTractogram
   logger
   set_sft_logger_level

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.streamline`
----------------------------
.. automodule:: dipy.io.streamline

.. currentmodule:: dipy.io.streamline
.. autosummary::

   save_tractogram
   load_tractogram
   load_generator
   save_generator
   load_trk
   load_tck
   load_trx
   load_vtk
   load_vtp
   load_fib
   load_dpy
   save_trk
   save_tck
   save_trx
   save_vtk
   save_vtp
   save_fib
   save_dpy

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.surface`
-------------------------
.. automodule:: dipy.io.surface

.. currentmodule:: dipy.io.surface
.. autosummary::

   load_pial
   load_gifti

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.utils`
-----------------------
.. automodule:: dipy.io.utils

.. currentmodule:: dipy.io.utils
.. autosummary::

   nifti1_symmat
   make5d
   decfa
   decfa_to_float
   is_reference_info_valid
   split_name_with_gz
   get_reference_info
   is_header_compatible
   create_tractogram_header
   create_nifti_header
   save_buan_profiles_hdf5
   read_img_arr_or_path

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.vtk`
---------------------
.. automodule:: dipy.io.vtk

.. currentmodule:: dipy.io.vtk
.. autosummary::

   load_polydata
   save_polydata
   save_vtk_streamlines
   load_vtk_streamlines


.. currentmodule:: dipy.io


.. currentmodule:: dipy.io.dpy


:class:`Dpy`
~~~~~~~~~~~~


.. autoclass:: Dpy
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: dipy.io.gradients

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs


.. currentmodule:: dipy.io.image

load_nifti_data
~~~~~~~~~~~~~~~

.. autofunction:: load_nifti_data

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti

save_qa_metric
~~~~~~~~~~~~~~

.. autofunction:: save_qa_metric


.. currentmodule:: dipy.io.peaks

load_peaks
~~~~~~~~~~

.. autofunction:: load_peaks

save_peaks
~~~~~~~~~~

.. autofunction:: save_peaks

peaks_to_niftis
~~~~~~~~~~~~~~~

.. autofunction:: peaks_to_niftis


.. currentmodule:: dipy.io.pickles

save_pickle
~~~~~~~~~~~

.. autofunction:: save_pickle

load_pickle
~~~~~~~~~~~

.. autofunction:: load_pickle


.. currentmodule:: dipy.io.stateful_tractogram


:class:`Space`
~~~~~~~~~~~~~~


.. autoclass:: Space
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Origin`
~~~~~~~~~~~~~~~


.. autoclass:: Origin
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`StatefulTractogram`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: StatefulTractogram
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

logger
~~~~~~

.. autofunction:: logger

set_sft_logger_level
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_sft_logger_level


.. currentmodule:: dipy.io.streamline

save_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: save_tractogram

load_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: load_tractogram

load_generator
~~~~~~~~~~~~~~

.. autofunction:: load_generator

save_generator
~~~~~~~~~~~~~~

.. autofunction:: save_generator

load_trk
~~~~~~~~

.. autofunction:: load_trk

load_tck
~~~~~~~~

.. autofunction:: load_tck

load_trx
~~~~~~~~

.. autofunction:: load_trx

load_vtk
~~~~~~~~

.. autofunction:: load_vtk

load_vtp
~~~~~~~~

.. autofunction:: load_vtp

load_fib
~~~~~~~~

.. autofunction:: load_fib

load_dpy
~~~~~~~~

.. autofunction:: load_dpy

save_trk
~~~~~~~~

.. autofunction:: save_trk

save_tck
~~~~~~~~

.. autofunction:: save_tck

save_trx
~~~~~~~~

.. autofunction:: save_trx

save_vtk
~~~~~~~~

.. autofunction:: save_vtk

save_vtp
~~~~~~~~

.. autofunction:: save_vtp

save_fib
~~~~~~~~

.. autofunction:: save_fib

save_dpy
~~~~~~~~

.. autofunction:: save_dpy


.. currentmodule:: dipy.io.surface

load_pial
~~~~~~~~~

.. autofunction:: load_pial

load_gifti
~~~~~~~~~~

.. autofunction:: load_gifti


.. currentmodule:: dipy.io.utils

nifti1_symmat
~~~~~~~~~~~~~

.. autofunction:: nifti1_symmat

make5d
~~~~~~

.. autofunction:: make5d

decfa
~~~~~

.. autofunction:: decfa

decfa_to_float
~~~~~~~~~~~~~~

.. autofunction:: decfa_to_float

is_reference_info_valid
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: is_reference_info_valid

split_name_with_gz
~~~~~~~~~~~~~~~~~~

.. autofunction:: split_name_with_gz

get_reference_info
~~~~~~~~~~~~~~~~~~

.. autofunction:: get_reference_info

is_header_compatible
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: is_header_compatible

create_tractogram_header
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: create_tractogram_header

create_nifti_header
~~~~~~~~~~~~~~~~~~~

.. autofunction:: create_nifti_header

save_buan_profiles_hdf5
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: save_buan_profiles_hdf5

read_img_arr_or_path
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: read_img_arr_or_path


.. currentmodule:: dipy.io.vtk

load_polydata
~~~~~~~~~~~~~

.. autofunction:: load_polydata

save_polydata
~~~~~~~~~~~~~

.. autofunction:: save_polydata

save_vtk_streamlines
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: save_vtk_streamlines

load_vtk_streamlines
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: load_vtk_streamlines

