1.12.0/_sources/reference/dipy.io.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`io`
=========
.. automodule:: dipy.io

.. currentmodule:: dipy.io
.. autosummary::



.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.dpy`
---------------------
.. automodule:: dipy.io.dpy

.. currentmodule:: dipy.io.dpy
.. autosummary::

   Dpy


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.gradients`
---------------------------
.. automodule:: dipy.io.gradients

.. currentmodule:: dipy.io.gradients
.. autosummary::

   read_bvals_bvecs


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.image`
-----------------------
.. automodule:: dipy.io.image

.. currentmodule:: dipy.io.image
.. autosummary::

   load_nifti_data
   load_nifti
   save_nifti
   save_qa_metric


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.peaks`
-----------------------
.. automodule:: dipy.io.peaks

.. currentmodule:: dipy.io.peaks
.. autosummary::

   load_pam
   save_pam
   pam_to_niftis
   niftis_to_pam
   tensor_to_pam


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.pickles`
-------------------------
.. automodule:: dipy.io.pickles

.. currentmodule:: dipy.io.pickles
.. autosummary::

   save_pickle
   load_pickle


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.stateful_surface`
----------------------------------
.. automodule:: dipy.io.stateful_surface

.. currentmodule:: dipy.io.stateful_surface
.. autosummary::

   StatefulSurface


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.stateful_tractogram`
-------------------------------------
.. automodule:: dipy.io.stateful_tractogram

.. currentmodule:: dipy.io.stateful_tractogram
.. autosummary::

   StatefulTractogram


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.streamline`
----------------------------
.. automodule:: dipy.io.streamline

.. currentmodule:: dipy.io.streamline
.. autosummary::

   save_tractogram
   load_tractogram
   load_generator
   save_generator
   load_trk
   load_tck
   load_trx
   load_vtk
   load_vtp
   load_fib
   load_dpy
   save_trk
   save_tck
   save_trx
   save_vtk
   save_vtp
   save_fib
   save_dpy


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.surface`
-------------------------
.. automodule:: dipy.io.surface

.. currentmodule:: dipy.io.surface
.. autosummary::

   load_surface
   save_surface
   load_pial
   save_pial
   load_gifti
   save_gifti
   apply_freesurfer_transform


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.utils`
-----------------------
.. automodule:: dipy.io.utils

.. currentmodule:: dipy.io.utils
.. autosummary::

   Space
   Origin
   nifti1_symmat
   make5d
   decfa
   decfa_to_float
   is_reference_info_valid
   get_reference_info
   is_header_compatible
   create_tractogram_header
   create_nifti_header
   save_buan_profiles_hdf5
   read_img_arr_or_path
   recursive_compare
   split_filename_extension


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.vtk`
---------------------
.. automodule:: dipy.io.vtk

.. currentmodule:: dipy.io.vtk
.. autosummary::

   load_polydata
   save_polydata
   save_vtk_streamlines
   load_vtk_streamlines
   get_polydata_triangles
   get_polydata_vertices
   convert_to_polydata



.. currentmodule:: dipy.io


.. currentmodule:: dipy.io.dpy


:class:`Dpy`
~~~~~~~~~~~~


.. autoclass:: Dpy
  :members:
  :show-inheritance:


.. currentmodule:: dipy.io.gradients

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs



.. currentmodule:: dipy.io.image

load_nifti_data
~~~~~~~~~~~~~~~

.. autofunction:: load_nifti_data


load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti


save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti


save_qa_metric
~~~~~~~~~~~~~~

.. autofunction:: save_qa_metric



.. currentmodule:: dipy.io.peaks

load_pam
~~~~~~~~

.. autofunction:: load_pam


save_pam
~~~~~~~~

.. autofunction:: save_pam


pam_to_niftis
~~~~~~~~~~~~~

.. autofunction:: pam_to_niftis


niftis_to_pam
~~~~~~~~~~~~~

.. autofunction:: niftis_to_pam


tensor_to_pam
~~~~~~~~~~~~~

.. autofunction:: tensor_to_pam



.. currentmodule:: dipy.io.pickles

save_pickle
~~~~~~~~~~~

.. autofunction:: save_pickle


load_pickle
~~~~~~~~~~~

.. autofunction:: load_pickle



.. currentmodule:: dipy.io.stateful_surface


:class:`StatefulSurface`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: StatefulSurface
  :members:
  :show-inheritance:


.. currentmodule:: dipy.io.stateful_tractogram


:class:`StatefulTractogram`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: StatefulTractogram
  :members:
  :show-inheritance:


.. currentmodule:: dipy.io.streamline

save_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: save_tractogram


load_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: load_tractogram


load_generator
~~~~~~~~~~~~~~

.. autofunction:: load_generator


save_generator
~~~~~~~~~~~~~~

.. autofunction:: save_generator


load_trk
~~~~~~~~

.. autofunction:: load_trk


load_tck
~~~~~~~~

.. autofunction:: load_tck


load_trx
~~~~~~~~

.. autofunction:: load_trx


load_vtk
~~~~~~~~

.. autofunction:: load_vtk


load_vtp
~~~~~~~~

.. autofunction:: load_vtp


load_fib
~~~~~~~~

.. autofunction:: load_fib


load_dpy
~~~~~~~~

.. autofunction:: load_dpy


save_trk
~~~~~~~~

.. autofunction:: save_trk


save_tck
~~~~~~~~

.. autofunction:: save_tck


save_trx
~~~~~~~~

.. autofunction:: save_trx


save_vtk
~~~~~~~~

.. autofunction:: save_vtk


save_vtp
~~~~~~~~

.. autofunction:: save_vtp


save_fib
~~~~~~~~

.. autofunction:: save_fib


save_dpy
~~~~~~~~

.. autofunction:: save_dpy



.. currentmodule:: dipy.io.surface

load_surface
~~~~~~~~~~~~

.. autofunction:: load_surface


save_surface
~~~~~~~~~~~~

.. autofunction:: save_surface


load_pial
~~~~~~~~~

.. autofunction:: load_pial


save_pial
~~~~~~~~~

.. autofunction:: save_pial


load_gifti
~~~~~~~~~~

.. autofunction:: load_gifti


save_gifti
~~~~~~~~~~

.. autofunction:: save_gifti


apply_freesurfer_transform
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: apply_freesurfer_transform



.. currentmodule:: dipy.io.utils


:class:`Space`
~~~~~~~~~~~~~~


.. autoclass:: Space
  :members:
  :show-inheritance:


:class:`Origin`
~~~~~~~~~~~~~~~


.. autoclass:: Origin
  :members:
  :show-inheritance:

nifti1_symmat
~~~~~~~~~~~~~

.. autofunction:: nifti1_symmat


make5d
~~~~~~

.. autofunction:: make5d


decfa
~~~~~

.. autofunction:: decfa


decfa_to_float
~~~~~~~~~~~~~~

.. autofunction:: decfa_to_float


is_reference_info_valid
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: is_reference_info_valid


get_reference_info
~~~~~~~~~~~~~~~~~~

.. autofunction:: get_reference_info


is_header_compatible
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: is_header_compatible


create_tractogram_header
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: create_tractogram_header


create_nifti_header
~~~~~~~~~~~~~~~~~~~

.. autofunction:: create_nifti_header


save_buan_profiles_hdf5
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: save_buan_profiles_hdf5


read_img_arr_or_path
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: read_img_arr_or_path


recursive_compare
~~~~~~~~~~~~~~~~~

.. autofunction:: recursive_compare


split_filename_extension
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: split_filename_extension



.. currentmodule:: dipy.io.vtk

load_polydata
~~~~~~~~~~~~~

.. autofunction:: load_polydata


save_polydata
~~~~~~~~~~~~~

.. autofunction:: save_polydata


save_vtk_streamlines
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: save_vtk_streamlines


load_vtk_streamlines
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: load_vtk_streamlines


get_polydata_triangles
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_triangles


get_polydata_vertices
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_vertices


convert_to_polydata
~~~~~~~~~~~~~~~~~~~

.. autofunction:: convert_to_polydata


